jpg, png to webp

--- a/src/html/sections/footer.html
+++ b/src/html/sections/footer.html
@@ -4,7 +4,7 @@
 
       <div class="footer__map map-footer">
         <a class="map-footer__image ibga" href="https://g.page/sankt-elisabeth-hd?share" target="_blank">
-          <img src="@img/footer/01.png" alt="map">
+          <img src="@img/footer/01.webp" alt="map">
           <span class="map-footer__location icon-location"></span>
         </a>
       </div>
