--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 
             <div class="vision__image image-vision">
               <div class="image-vision__img">
-                <img src="@img/vision/33.png" alt="image">
+                <img src="@img/vision/01.png" alt="image">
               </div>
             </div>
 
@@ -100,7 +100,7 @@
               </div>
 
               <div class="bottom-brustdiagnostik__img ibga">
-                <img src="@img/brustdiagnostik/02.png" alt="image">
+                <img src="@img/brustdiagnostik/02.webp" alt="image">
               </div>
             </div>
           </div>
@@ -148,7 +148,7 @@
       <section class="team sec" id="team">
         <div class="container">
 
-          <img class="team__bg" src="@img/team/bg.png" alt="background">
+          <img class="team__bg" src="@img/team/bg.webp" alt="background">
 
           <div class="team__main">
 
@@ -160,7 +160,7 @@
               <div class="team__doctors doctors-team">
                 <div class="doctors-team__item">
                   <div class="doctors-team__img ibga">
-                    <img src="@img/team/01.png" alt="image">
+                    <img src="@img/team/01.webp" alt="image">
 
                     <div class="doctors-team__row">
                       <div class="doctors-team__name">Prof. Jörg Heil</div>
@@ -170,7 +170,7 @@
 
                 <div class="doctors-team__item">
                   <div class="doctors-team__img ibga">
-                    <img src="@img/team/02.png" alt="image">
+                    <img src="@img/team/02.webp" alt="image">
 
                     <div class="doctors-team__row">
                       <div class="doctors-team__name">Prof. Michael Golatta</div>
