--- a/src/team.html
+++ b/src/team.html
@@ -55,27 +55,27 @@
                 <div class="drs-team-page__wrapp swiper-wrapper">
 
                   <div class="drs-team-page__img swiper-slide">
-                    <img class="sw-i sw-i-f" src="@img/team-page/01.png" alt="image">
+                    <img class="sw-i sw-i-f" src="@img/team-page/01.webp" alt="image">
                     <span class="drs-team-page__p"></span>
                   </div>
 
                   <div class="drs-team-page__img swiper-slide">
-                    <img class="sw-i" src="@img/team-page/02.png" alt="image">
+                    <img class="sw-i" src="@img/team-page/02.webp" alt="image">
                     <span class="drs-team-page__p"></span>
                   </div>
 
                   <div class="drs-team-page__img swiper-slide">
-                    <img class="sw-i" src="@img/team-page/03.jpg" alt="image">
+                    <img class="sw-i" src="@img/team-page/03.webp" alt="image">
                     <span class="drs-team-page__p"></span>
                   </div>
 
                   <div class="drs-team-page__img swiper-slide">
-                    <img class="sw-i" src="@img/team-page/04.jpg" alt="image">
+                    <img class="sw-i" src="@img/team-page/04.webp" alt="image">
                     <span class="drs-team-page__p"></span>
                   </div>
 
                   <div class="drs-team-page__img swiper-slide">
-                    <img class="sw-i" src="@img/team-page/05.jpg" alt="image">
+                    <img class="sw-i" src="@img/team-page/05.webp" alt="image">
                     <span class="drs-team-page__p"></span>
                   </div>
 
